--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
   <style>
     @font-face {
       font-family: 'InspectorGeneral';
-      src: url('https://www.ffonts.net/Inspector-General-Condensed.ttf')
-           format('truetype');
+      src: url('https://www.ffonts.net/Inspector-General-Condensed.ttf') format('truetype');
     }
   </style>
 
-  <!-- Leaflet CSS -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css"
   />
-
   <style>
     body {
       margin: 0;
@@ -41,7 +38,6 @@
       height: auto;
       user-select: none;
       -webkit-user-drag: none;
-      user-drag: none;
       margin-bottom: 1rem;
     }
     #splash button {
@@ -54,11 +50,12 @@
       cursor: pointer;
     }
 
-    /* ROUND LAYOUT WRAPPER */
+    /* ROUND LAYOUT */
     #game { display: none; }
     .roundContainer {
       display: flex;
       gap: 1rem;
+      align-items: flex-start;        /* top-align map + image */
       max-width: 1200px;
       margin: 1rem auto;
       padding: 0 1rem;
@@ -76,9 +73,8 @@
       border: 4px solid #ccc;
       border-radius: 4px;
       touch-action: none;
-      /* height:auto so image fits width by default */
-      height: auto;
-      max-height: 400px; /* optional cap */
+      width: 100%;
+      /* no fixed height, so it grows to fit the image */
     }
     .zoom-container img {
       display: block;
@@ -88,7 +84,6 @@
       cursor: grab;
       user-select: none;
       -webkit-user-drag: none;
-      user-drag: none;
     }
 
     /* MAP & CONTROLS */
@@ -101,14 +96,12 @@
       gap: 1rem;
       align-items: center;
     }
-    #controls label {
-      white-space: nowrap;
-    }
+    #controls label { white-space: nowrap; }
     #slider {
       flex: 1;
       accent-color: #d64541;
     }
-    input[type='range']::-webkit-slider-thumb {
+    input[type=range]::-webkit-slider-thumb {
       background: #d64541;
       border: none;
       height: 16px;
@@ -140,9 +133,7 @@
       color: #d64541;
       margin-bottom: 0.5rem;
     }
-    #feedback p {
-      margin: 0.25em 0;
-    }
+    #feedback p { margin: 0.25em 0; }
     #feedback button {
       margin-top: 0.5rem;
       background: #d64541;
@@ -161,17 +152,9 @@
       margin: 1rem auto;
       padding: 0 1rem;
     }
-    #finalArea {
-      display: flex;
-      gap: 1rem;
-    }
-    #finalMap {
-      flex: 1;
-      height: 300px;
-    }
-    #scoreTable {
-      flex: 1;
-    }
+    #finalArea { display: flex; gap: 1rem; }
+    #finalMap { flex: 1; height: 300px; }
+    #scoreTable { flex: 1; }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -188,10 +171,7 @@
 
   <!-- SPLASH -->
   <div id="splash">
-    <img id="splashLogo"
-         src="splashpagelogo.png"
-         alt="MOMGUESSR Logo"
-         draggable="false">
+    <img id="splashLogo" src="splashpagelogo.png" alt="MOMGUESSR" draggable="false">
     <button id="playBtn">Play</button>
   </div>
 
@@ -204,17 +184,13 @@
           <img id="photo" alt="Round image" draggable="false">
         </div>
       </div>
-      <!-- MAP + CONTROLS -->
+
+      <!-- MAP + SLIDER -->
       <div id="interactionArea">
         <div id="map"></div>
         <div id="controls">
-          <label><span id="labelText">Year:</span>
-                <span id="yearDisplay">1900</span></label>
-          <input type="range"
-                 id="slider"
-                 min="1900"
-                 max="2025"
-                 draggable="false">
+          <label><span id="labelText">Year:</span> <span id="yearDisplay">1900</span></label>
+          <input type="range" id="slider" min="1900" max="2025" draggable="false">
           <button id="guessButton">Make Guess</button>
         </div>
       </div>
@@ -236,20 +212,11 @@
         <h2>Your Score</h2>
         <table>
           <thead>
-            <tr>
-              <th>Round</th>
-              <th>Distance (mi)</th>
-              <th>Year Err</th>
-              <th>Score</th>
-            </tr>
+            <tr><th>Round</th><th>Distance (mi)</th><th>Year Err</th><th>Score</th></tr>
           </thead>
           <tbody id="resultsBody"></tbody>
           <tfoot>
-            <tr>
-              <th>Total</th>
-              <td colspan="2"></td>
-              <th id="totalScore"></th>
-            </tr>
+            <tr><th>Total</th><td colspan="2"></td><th id="totalScore"></th></tr>
           </tfoot>
         </table>
       </div>
@@ -259,273 +226,199 @@
   <!-- LEAFLET JS -->
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    // GLOBAL STATE
     let map, guessMarker, correctMarker, connectionLine, finalMap;
     let allPhotos = [], gamePhotos = [], current = 0, rounds = [];
     const MAX_ROUNDS = 5,
           YEAR_MIN = 1900,
           YEAR_MAX = 2025,
-          EARTH_HALF_CIRC = 20037.5; // km
+          EARTH_HALF_CIRC = 20037.5;
 
-    // UI NODES
-    const splash = document.getElementById('splash'),
-          playBtn = document.getElementById('playBtn'),
-          gameDiv = document.getElementById('game'),
-          photoEl = document.getElementById('photo'),
-          slider = document.getElementById('slider'),
-          yearDisp = document.getElementById('yearDisplay'),
-          labelText = document.getElementById('labelText'),
-          guessBtn = document.getElementById('guessButton'),
-          feedback = document.getElementById('feedback'),
-          captionFb = document.getElementById('captionFeedback'),
+    const splash      = document.getElementById('splash'),
+          playBtn     = document.getElementById('playBtn'),
+          gameDiv     = document.getElementById('game'),
+          photoEl     = document.getElementById('photo'),
+          slider      = document.getElementById('slider'),
+          yearDisp    = document.getElementById('yearDisplay'),
+          labelText   = document.getElementById('labelText'),
+          guessBtn    = document.getElementById('guessButton'),
+          feedback    = document.getElementById('feedback'),
+          captionFb   = document.getElementById('captionFeedback'),
           feedbackMsg = document.getElementById('feedbackMessage'),
-          nextBtn = document.getElementById('nextRoundBtn'),
-          resultsDiv = document.getElementById('results'),
-          finalMapEl = document.getElementById('finalMap'),
+          nextBtn     = document.getElementById('nextRoundBtn'),
+          resultsDiv  = document.getElementById('results'),
+          finalMapEl  = document.getElementById('finalMap'),
           resultsBody = document.getElementById('resultsBody'),
           totalScoreE = document.getElementById('totalScore');
 
-    // LOAD PHOTOS
+    // Load photos.json
     fetch('photos.json')
-      .then(r => r.json())
-      .then(a => allPhotos = a)
-      .catch(_ => alert('Could not load photos.json'));
+      .then(r=>r.json())
+      .then(a=>allPhotos=a)
+      .catch(_=>alert('Could not load photos.json'));
 
-    // SLIDER
-    slider.min = YEAR_MIN;
-    slider.max = YEAR_MAX;
-    slider.addEventListener('input', () => {
-      yearDisp.textContent = slider.value;
-    });
+    // Slider
+    slider.min=YEAR_MIN; slider.max=YEAR_MAX;
+    slider.addEventListener('input',()=>yearDisp.textContent=slider.value);
 
-    // IMAGE PAN/ZOOM CLAMP
-    let scale = 1, ox = 0, oy = 0, sx, sy, panning = false;
-    function updateImg() {
-      const c = photoEl.parentNode,
-            cw = c.clientWidth, ch = c.clientHeight,
-            sw = cw * scale, sh = ch * scale,
-            minX = Math.min(0, cw - sw),
-            minY = Math.min(0, ch - sh);
-      ox = Math.max(minX, Math.min(ox, 0));
-      oy = Math.max(minY, Math.min(oy, 0));
-      photoEl.style.transform = `translate(${ox}px,${oy}px) scale(${scale})`;
+    // Image pan/zoom clamp
+    let scale=1, ox=0, oy=0, sx, sy, panning=false;
+    function updateImg(){
+      const c=photoEl.parentNode, cw=c.clientWidth, ch=c.clientHeight,
+            sw=cw*scale, sh=ch*scale,
+            minX=Math.min(0,cw-sw), minY=Math.min(0,ch-sh);
+      ox=Math.max(minX,Math.min(ox,0));
+      oy=Math.max(minY,Math.min(oy,0));
+      photoEl.style.transform=`translate(${ox}px,${oy}px) scale(${scale})`;
     }
-    photoEl.addEventListener('wheel', e => {
+    photoEl.addEventListener('wheel',e=>{
       e.preventDefault();
-      scale = Math.min(Math.max(scale + (e.deltaY>0?-0.1:0.1), 1), 5);
+      scale=Math.min(Math.max(scale+(e.deltaY>0?-0.1:0.1),1),5);
       updateImg();
     });
-    photoEl.addEventListener('mousedown', e => {
-      panning = true;
-      sx = e.clientX - ox;
-      sy = e.clientY - oy;
-      photoEl.style.cursor = 'grabbing';
+    photoEl.addEventListener('mousedown',e=>{
+      panning=true; sx=e.clientX-ox; sy=e.clientY-oy;
+      photoEl.style.cursor='grabbing';
     });
-    document.addEventListener('mousemove', e => {
-      if (!panning) return;
-      ox = e.clientX - sx;
-      oy = e.clientY - sy;
-      updateImg();
+    document.addEventListener('mousemove',e=>{
+      if(!panning) return;
+      ox=e.clientX-sx; oy=e.clientY-sy; updateImg();
     });
-    document.addEventListener('mouseup', () => {
-      panning = false;
-      photoEl.style.cursor = 'grab';
+    document.addEventListener('mouseup',()=>{
+      panning=false; photoEl.style.cursor='grab';
     });
 
-    // PLAY BUTTON
-    playBtn.onclick = () => {
-      splash.style.display = 'none';
-      gameDiv.style.display = 'block';
+    // Play button
+    playBtn.onclick=_=>{
+      splash.style.display='none';
+      gameDiv.style.display='block';
       startGame();
     };
 
-    // GAME FLOW
-    function startGame() {
-      gamePhotos = shuffle(allPhotos).slice(0, MAX_ROUNDS);
-      current = 0;
-      rounds = [];
+    function startGame(){
+      gamePhotos=shuffle(allPhotos).slice(0,MAX_ROUNDS);
+      current=0; rounds=[];
       nextRound();
     }
 
-    function nextRound() {
-      // reset UI
-      feedback.style.display = 'none';
-      captionFb.textContent = '';
-      labelText.textContent = 'Year:';
-      guessBtn.style.display = 'inline-block';
+    function nextRound(){
+      feedback.style.display='none';
+      captionFb.textContent='';
+      labelText.textContent='Year:';
+      guessBtn.style.display='inline-block';
 
-      // clear old markers/line
-      [guessMarker, correctMarker, connectionLine]
-        .forEach(m => m && m.remove());
-      if (map) map.remove();
+      [guessMarker,correctMarker,connectionLine].forEach(m=>m&&m.remove());
+      if(map) map.remove();
 
-      // end?
-      if (current >= gamePhotos.length) return showResults();
+      if(current>=gamePhotos.length) return showResults();
 
-      // show photo
-      const p = gamePhotos[current];
+      const p=gamePhotos[current];
       scale=1; ox=oy=0; updateImg();
-      photoEl.src = p.src;
+      photoEl.src=p.src;
 
-      // reset slider
-      const mid = Math.floor((YEAR_MIN + YEAR_MAX)/2);
-      slider.value = mid;
-      yearDisp.textContent = mid;
+      const mid=(YEAR_MIN+YEAR_MAX)/2|0;
+      slider.value=mid; yearDisp.textContent=mid;
 
-      // init map
-      map = L.map('map').setView([0,0],2);
-      L.tileLayer(
-        'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-        { maxZoom:19 }
-      ).addTo(map);
+      map=L.map('map').setView([0,0],2);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
 
-      // click to place/move marker
-      map.on('click', e => {
-        const opts = { zIndexOffset: 1000 };
-        if (guessMarker) {
+      map.on('click',e=>{
+        const opts={zIndexOffset:1000};
+        if(guessMarker){
           guessMarker.setLatLng(e.latlng);
         } else {
-          guessMarker = L.circleMarker(e.latlng, {
-            color:'black',
-            fillColor:'black',
-            fillOpacity:1,
-            radius:8,
+          guessMarker=L.circleMarker(e.latlng,{
+            color:'black',fillColor:'black',fillOpacity:1,radius:8,
             ...opts
-          }).addTo(map)
-            .bindPopup('Your guess')
-            .openPopup();
+          }).addTo(map).bindPopup('Your guess').openPopup();
         }
         guessMarker.bringToFront();
-        map.userLatLng = e.latlng;
+        map.userLatLng=e.latlng;
       });
 
-      slider.disabled = false;
-      guessBtn.disabled = false;
+      slider.disabled=false;
+      guessBtn.disabled=false;
     }
 
-    guessBtn.onclick = () => {
-      if (!map || !map.userLatLng)
-        return alert('Click map to place your guess first.');
-
-      // disable further guesses
+    guessBtn.onclick=_=>{
+      if(!map||!map.userLatLng) return alert('Click map to guess!');
       map.off('click');
-      slider.disabled = true;
-      guessBtn.disabled = true;
-      guessBtn.style.display = 'none';
-      labelText.textContent = 'Your Guess:';
+      slider.disabled=true;
+      guessBtn.disabled=true;
+      guessBtn.style.display='none';
+      labelText.textContent='Your Guess:';
 
-      const p = gamePhotos[current],
-            gl = map.userLatLng,
-            distKm = haversine(p.lat,p.lng,gl.lat,gl.lng),
-            distMi = (distKm * 0.621371).toFixed(1),
-            errY   = Math.abs(slider.value - p.year),
-            sDist  = Math.max(0, Math.round((1 - distKm/EARTH_HALF_CIRC)*5000)),
-            sYear  = Math.max(0, Math.round((1 - errY/(YEAR_MAX-YEAR_MIN))*5000)),
-            score  = sDist + sYear;
+      const p=gamePhotos[current], gl=map.userLatLng;
+      const distKm=haversine(p.lat,p.lng,gl.lat,gl.lng),
+            distMi=(distKm*0.621371).toFixed(1),
+            errY=Math.abs(slider.value-p.year),
+            sDist=Math.max(0,Math.round((1-distKm/EARTH_HALF_CIRC)*5000)),
+            sYear=Math.max(0,Math.round((1-errY/(YEAR_MAX-YEAR_MIN))*5000)),
+            score=sDist+sYear;
 
-      rounds.push({
-        round: current+1,
-        distMi, errY, score,
-        guess: gl,
-        correct: [p.lat, p.lng]
-      });
+      rounds.push({round:current+1,distMi,errY,score,guess:gl,correct:[p.lat,p.lng]});
 
-      // correct marker in red, slightly lower z-index
-      correctMarker = L.circleMarker(p.correct, {
-        color:'red',
-        fillColor:'red',
-        fillOpacity:1,
-        radius:8,
-        zIndexOffset: 500
-      }).addTo(map)
-        .bindPopup('Location')
-        .openPopup();
+      correctMarker=L.circleMarker(p.correct,{
+        color:'red',fillColor:'red',fillOpacity:1,radius:8,zIndexOffset:500
+      }).addTo(map).bindPopup('Location').openPopup();
 
-      // dashed line
-      connectionLine = L.polyline(
-        [gl, [p.lat,p.lng]],
-        { color:'red', dashArray:'5,5' }
-      ).addTo(map);
+      connectionLine=L.polyline([gl,[p.lat,p.lng]],{
+        color:'red',dashArray:'5,5'
+      }).addTo(map);
 
-      captionFb.textContent = p.caption;
-      feedbackMsg.innerHTML = `
+      captionFb.textContent=p.caption;
+      feedbackMsg.innerHTML=`
         <p>Your guess was <strong>${distMi} miles</strong> off.</p>
         <p>You were <strong>${errY} years</strong> off.</p>
         <p>Points — Loc: <strong>${sDist}</strong>/5000,
            Yr: <strong>${sYear}</strong>/5000,
            Total: <strong>${score}</strong>/10000.</p>
       `;
-      feedback.style.display = 'block';
+      feedback.style.display='block';
     };
 
-    nextBtn.onclick = () => {
+    nextBtn.onclick=_=>{
       current++;
       nextRound();
     };
 
-    function showResults() {
-      gameDiv.style.display = 'none';
-      resultsDiv.style.display = 'block';
+    function showResults(){
+      gameDiv.style.display='none';
+      resultsDiv.style.display='block';
 
-      finalMap = L.map(finalMapEl).setView([0,0],2);
-      L.tileLayer(
-        'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
-        { maxZoom:19 }
-      ).addTo(finalMap);
+      finalMap=L.map(finalMapEl).setView([0,0],2);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(finalMap);
 
-      let total = 0, ll = [];
-      rounds.forEach(r => {
-        // table row
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
+      let total=0, ll=[];
+      rounds.forEach(r=>{
+        const tr=document.createElement('tr');
+        tr.innerHTML=`
           <td>${r.round}</td>
           <td>${r.distMi}</td>
           <td>${r.errY}</td>
           <td>${r.score}</td>
         `;
         resultsBody.appendChild(tr);
-        total += r.score;
+        total+=r.score;
 
-        // final markers & lines
-        L.circleMarker(r.guess, {
-          color:'black',
-          fillColor:'black',
-          radius:6,
-          zIndexOffset:1000
-        }).addTo(finalMap);
+        L.circleMarker(r.guess,{color:'black',fillColor:'black',radius:6,zIndexOffset:1000})
+         .addTo(finalMap);
+        L.circleMarker(r.correct,{color:'red',fillColor:'red',radius:6,zIndexOffset:500})
+         .addTo(finalMap);
+        L.polyline([r.guess,r.correct],{color:'red',dashArray:'5,5'}).addTo(finalMap);
 
-        L.circleMarker(r.correct, {
-          color:'red',
-          fillColor:'red',
-          radius:6,
-          zIndexOffset:500
-        }).addTo(finalMap);
-
-        L.polyline([r.guess, r.correct], {
-          color:'red',
-          dashArray:'5,5'
-        }).addTo(finalMap);
-
-        ll.push(r.guess, r.correct);
+        ll.push(r.guess,r.correct);
       });
-
-      totalScoreE.textContent = total;
+      totalScoreE.textContent=total;
       finalMap.fitBounds(L.latLngBounds(ll).pad(0.2));
     }
 
-    // HELPERS
-    function shuffle(a) {
-      return a.sort(() => 0.5 - Math.random());
-    }
-    function haversine(lat1,lng1,lat2,lng2) {
-      const R = 6371, toRad = Math.PI/180;
-      const dLat = (lat2 - lat1)*toRad;
-      const dLng = (lng2 - lng1)*toRad;
-      const h = Math.sin(dLat/2)**2
-              + Math.cos(lat1*toRad)
-              * Math.cos(lat2*toRad)
-              * Math.sin(dLng/2)**2;
-      return 2 * R * Math.asin(Math.sqrt(h));
+    function shuffle(a){ return a.sort(()=>0.5-Math.random()); }
+    function haversine(lat1,lng1,lat2,lng2){
+      const R=6371, toRad=Math.PI/180;
+      const dLat=(lat2-lat1)*toRad, dLng=(lng2-lng1)*toRad;
+      const h=Math.sin(dLat/2)**2+
+              Math.cos(lat1*toRad)*Math.cos(lat2*toRad)*Math.sin(dLng/2)**2;
+      return 2*R*Math.asin(Math.sqrt(h));
     }
   </script>
 </body>
