--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <style>
     @font-face {
       font-family: 'InspectorGeneral';
-      src: url('https://www.ffonts.net/Inspector-General-Condensed.ttf') format('truetype');
+      src: url('https://www.ffonts.net/Inspector-General-Condensed.ttf')
+           format('truetype');
     }
   </style>
 
+  <!-- Leaflet CSS -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css"
   />
+
   <style>
     body {
       margin: 0;
@@ -46,380 +49,4 @@
       background: #d64541;
       color: white;
       border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    /* ROUND LAYOUT */
-    #game { display: none; }
-    .roundContainer {
-      display: flex;
-      gap: 1rem;
-      align-items: flex-start;        /* top-align map + image */
-      max-width: 1200px;
-      margin: 1rem auto;
-      padding: 0 1rem;
-    }
-    #imageArea, #interactionArea {
-      flex: 0 0 48%;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-    }
-
-    /* IMAGE + PAN/ZOOM */
-    .zoom-container {
-      overflow: hidden;
-      border: 4px solid #ccc;
-      border-radius: 4px;
-      touch-action: none;
-      width: 100%;
-      /* no fixed height, so it grows to fit the image */
-    }
-    .zoom-container img {
-      display: block;
-      width: 100%;
-      height: auto;
-      transform-origin: 0 0;
-      cursor: grab;
-      user-select: none;
-      -webkit-user-drag: none;
-    }
-
-    /* MAP & CONTROLS */
-    #map {
-      flex: 1;
-      height: 300px;
-    }
-    #controls {
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-    }
-    #controls label { white-space: nowrap; }
-    #slider {
-      flex: 1;
-      accent-color: #d64541;
-    }
-    input[type=range]::-webkit-slider-thumb {
-      background: #d64541;
-      border: none;
-      height: 16px;
-      width: 16px;
-      border-radius: 8px;
-    }
-    #guessButton {
-      background: #d64541;
-      color: white;
-      border: none;
-      padding: 0.75em 1.5em;
-      font-size: 1rem;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    /* FEEDBACK */
-    #feedback {
-      display: none;
-      max-width: 1200px;
-      margin: 0 auto 1rem;
-      padding: 1rem;
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-    #captionFeedback {
-      font-size: 1.5rem;
-      color: #d64541;
-      margin-bottom: 0.5rem;
-    }
-    #feedback p { margin: 0.25em 0; }
-    #feedback button {
-      margin-top: 0.5rem;
-      background: #d64541;
-      color: white;
-      border: none;
-      padding: 0.5em 1em;
-      border-radius: 4px;
-      cursor: pointer;
-      align-self: flex-end;
-    }
-
-    /* FINAL RESULTS */
-    #results {
-      display: none;
-      max-width: 1200px;
-      margin: 1rem auto;
-      padding: 0 1rem;
-    }
-    #finalArea { display: flex; gap: 1rem; }
-    #finalMap { flex: 1; height: 300px; }
-    #scoreTable { flex: 1; }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1em;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 0.5em;
-      text-align: center;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- SPLASH -->
-  <div id="splash">
-    <img id="splashLogo" src="splashpagelogo.png" alt="MOMGUESSR" draggable="false">
-    <button id="playBtn">Play</button>
-  </div>
-
-  <!-- GAME -->
-  <div id="game">
-    <div class="roundContainer">
-      <!-- IMAGE -->
-      <div id="imageArea">
-        <div class="zoom-container">
-          <img id="photo" alt="Round image" draggable="false">
-        </div>
-      </div>
-
-      <!-- MAP + SLIDER -->
-      <div id="interactionArea">
-        <div id="map"></div>
-        <div id="controls">
-          <label><span id="labelText">Year:</span> <span id="yearDisplay">1900</span></label>
-          <input type="range" id="slider" min="1900" max="2025" draggable="false">
-          <button id="guessButton">Make Guess</button>
-        </div>
-      </div>
-    </div>
-
-    <!-- FEEDBACK -->
-    <div id="feedback">
-      <div id="captionFeedback"></div>
-      <div id="feedbackMessage"></div>
-      <button id="nextRoundBtn">Next Round</button>
-    </div>
-  </div>
-
-  <!-- RESULTS -->
-  <div id="results">
-    <div id="finalArea">
-      <div id="finalMap"></div>
-      <div id="scoreTable">
-        <h2>Your Score</h2>
-        <table>
-          <thead>
-            <tr><th>Round</th><th>Distance (mi)</th><th>Year Err</th><th>Score</th></tr>
-          </thead>
-          <tbody id="resultsBody"></tbody>
-          <tfoot>
-            <tr><th>Total</th><td colspan="2"></td><th id="totalScore"></th></tr>
-          </tfoot>
-        </table>
-      </div>
-    </div>
-  </div>
-
-  <!-- LEAFLET JS -->
-  <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script>
-    let map, guessMarker, correctMarker, connectionLine, finalMap;
-    let allPhotos = [], gamePhotos = [], current = 0, rounds = [];
-    const MAX_ROUNDS = 5,
-          YEAR_MIN = 1900,
-          YEAR_MAX = 2025,
-          EARTH_HALF_CIRC = 20037.5;
-
-    const splash      = document.getElementById('splash'),
-          playBtn     = document.getElementById('playBtn'),
-          gameDiv     = document.getElementById('game'),
-          photoEl     = document.getElementById('photo'),
-          slider      = document.getElementById('slider'),
-          yearDisp    = document.getElementById('yearDisplay'),
-          labelText   = document.getElementById('labelText'),
-          guessBtn    = document.getElementById('guessButton'),
-          feedback    = document.getElementById('feedback'),
-          captionFb   = document.getElementById('captionFeedback'),
-          feedbackMsg = document.getElementById('feedbackMessage'),
-          nextBtn     = document.getElementById('nextRoundBtn'),
-          resultsDiv  = document.getElementById('results'),
-          finalMapEl  = document.getElementById('finalMap'),
-          resultsBody = document.getElementById('resultsBody'),
-          totalScoreE = document.getElementById('totalScore');
-
-    // Load photos.json
-    fetch('photos.json')
-      .then(r=>r.json())
-      .then(a=>allPhotos=a)
-      .catch(_=>alert('Could not load photos.json'));
-
-    // Slider
-    slider.min=YEAR_MIN; slider.max=YEAR_MAX;
-    slider.addEventListener('input',()=>yearDisp.textContent=slider.value);
-
-    // Image pan/zoom clamp
-    let scale=1, ox=0, oy=0, sx, sy, panning=false;
-    function updateImg(){
-      const c=photoEl.parentNode, cw=c.clientWidth, ch=c.clientHeight,
-            sw=cw*scale, sh=ch*scale,
-            minX=Math.min(0,cw-sw), minY=Math.min(0,ch-sh);
-      ox=Math.max(minX,Math.min(ox,0));
-      oy=Math.max(minY,Math.min(oy,0));
-      photoEl.style.transform=`translate(${ox}px,${oy}px) scale(${scale})`;
-    }
-    photoEl.addEventListener('wheel',e=>{
-      e.preventDefault();
-      scale=Math.min(Math.max(scale+(e.deltaY>0?-0.1:0.1),1),5);
-      updateImg();
-    });
-    photoEl.addEventListener('mousedown',e=>{
-      panning=true; sx=e.clientX-ox; sy=e.clientY-oy;
-      photoEl.style.cursor='grabbing';
-    });
-    document.addEventListener('mousemove',e=>{
-      if(!panning) return;
-      ox=e.clientX-sx; oy=e.clientY-sy; updateImg();
-    });
-    document.addEventListener('mouseup',()=>{
-      panning=false; photoEl.style.cursor='grab';
-    });
-
-    // Play button
-    playBtn.onclick=_=>{
-      splash.style.display='none';
-      gameDiv.style.display='block';
-      startGame();
-    };
-
-    function startGame(){
-      gamePhotos=shuffle(allPhotos).slice(0,MAX_ROUNDS);
-      current=0; rounds=[];
-      nextRound();
-    }
-
-    function nextRound(){
-      feedback.style.display='none';
-      captionFb.textContent='';
-      labelText.textContent='Year:';
-      guessBtn.style.display='inline-block';
-
-      [guessMarker,correctMarker,connectionLine].forEach(m=>m&&m.remove());
-      if(map) map.remove();
-
-      if(current>=gamePhotos.length) return showResults();
-
-      const p=gamePhotos[current];
-      scale=1; ox=oy=0; updateImg();
-      photoEl.src=p.src;
-
-      const mid=(YEAR_MIN+YEAR_MAX)/2|0;
-      slider.value=mid; yearDisp.textContent=mid;
-
-      map=L.map('map').setView([0,0],2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
-
-      map.on('click',e=>{
-        const opts={zIndexOffset:1000};
-        if(guessMarker){
-          guessMarker.setLatLng(e.latlng);
-        } else {
-          guessMarker=L.circleMarker(e.latlng,{
-            color:'black',fillColor:'black',fillOpacity:1,radius:8,
-            ...opts
-          }).addTo(map).bindPopup('Your guess').openPopup();
-        }
-        guessMarker.bringToFront();
-        map.userLatLng=e.latlng;
-      });
-
-      slider.disabled=false;
-      guessBtn.disabled=false;
-    }
-
-    guessBtn.onclick=_=>{
-      if(!map||!map.userLatLng) return alert('Click map to guess!');
-      map.off('click');
-      slider.disabled=true;
-      guessBtn.disabled=true;
-      guessBtn.style.display='none';
-      labelText.textContent='Your Guess:';
-
-      const p=gamePhotos[current], gl=map.userLatLng;
-      const distKm=haversine(p.lat,p.lng,gl.lat,gl.lng),
-            distMi=(distKm*0.621371).toFixed(1),
-            errY=Math.abs(slider.value-p.year),
-            sDist=Math.max(0,Math.round((1-distKm/EARTH_HALF_CIRC)*5000)),
-            sYear=Math.max(0,Math.round((1-errY/(YEAR_MAX-YEAR_MIN))*5000)),
-            score=sDist+sYear;
-
-      rounds.push({round:current+1,distMi,errY,score,guess:gl,correct:[p.lat,p.lng]});
-
-      correctMarker=L.circleMarker(p.correct,{
-        color:'red',fillColor:'red',fillOpacity:1,radius:8,zIndexOffset:500
-      }).addTo(map).bindPopup('Location').openPopup();
-
-      connectionLine=L.polyline([gl,[p.lat,p.lng]],{
-        color:'red',dashArray:'5,5'
-      }).addTo(map);
-
-      captionFb.textContent=p.caption;
-      feedbackMsg.innerHTML=`
-        <p>Your guess was <strong>${distMi} miles</strong> off.</p>
-        <p>You were <strong>${errY} years</strong> off.</p>
-        <p>Points — Loc: <strong>${sDist}</strong>/5000,
-           Yr: <strong>${sYear}</strong>/5000,
-           Total: <strong>${score}</strong>/10000.</p>
-      `;
-      feedback.style.display='block';
-    };
-
-    nextBtn.onclick=_=>{
-      current++;
-      nextRound();
-    };
-
-    function showResults(){
-      gameDiv.style.display='none';
-      resultsDiv.style.display='block';
-
-      finalMap=L.map(finalMapEl).setView([0,0],2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(finalMap);
-
-      let total=0, ll=[];
-      rounds.forEach(r=>{
-        const tr=document.createElement('tr');
-        tr.innerHTML=`
-          <td>${r.round}</td>
-          <td>${r.distMi}</td>
-          <td>${r.errY}</td>
-          <td>${r.score}</td>
-        `;
-        resultsBody.appendChild(tr);
-        total+=r.score;
-
-        L.circleMarker(r.guess,{color:'black',fillColor:'black',radius:6,zIndexOffset:1000})
-         .addTo(finalMap);
-        L.circleMarker(r.correct,{color:'red',fillColor:'red',radius:6,zIndexOffset:500})
-         .addTo(finalMap);
-        L.polyline([r.guess,r.correct],{color:'red',dashArray:'5,5'}).addTo(finalMap);
-
-        ll.push(r.guess,r.correct);
-      });
-      totalScoreE.textContent=total;
-      finalMap.fitBounds(L.latLngBounds(ll).pad(0.2));
-    }
-
-    function shuffle(a){ return a.sort(()=>0.5-Math.random()); }
-    function haversine(lat1,lng1,lat2,lng2){
-      const R=6371, toRad=Math.PI/180;
-      const dLat=(lat2-lat1)*toRad, dLng=(lng2-lng1)*toRad;
-      const h=Math.sin(dLat/2)**2+
-              Math.cos(lat1*toRad)*Math.cos(lat2*toRad)*Math.sin(dLng/2)**2;
-      return 2*R*Math.asin(Math.sqrt(h));
-    }
-  </script>
-</body>
-</html>
+      border-radiu
